# rudedatabase

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.ac
man3/: rudedatabase.3
src/: database.cpp  database.h  implementation.cpp  implementation.h
